--- a/Pursuit-Core-iOS-Animations-Lab/Base.lproj/Main.storyboard
+++ b/Pursuit-Core-iOS-Animations-Lab/Base.lproj/Main.storyboard
@@ -82,20 +82,6 @@
                                     <action selector="moveLeftButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1MX-VG-saT"/>
                                 </connections>
                             </button>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" maximumValue="5" stepValue="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="IU3-m5-0OJ">
-                                <rect key="frame" x="160" y="790" width="94" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="stepperButtonPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="I7i-zS-wGZ"/>
-                                </connections>
-                            </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Duration Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cUf-Sm-r7c">
-                                <rect key="frame" x="20" y="841" width="374" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B71-wZ-1cD">
                                 <rect key="frame" x="0.0" y="45" width="414" height="50"/>
                                 <items>
@@ -106,14 +92,42 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MLK-gB-I5V">
-                                <rect key="frame" x="0.0" y="736" width="403" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="CustomAnimationButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hvg-v2-2D8"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="gVI-vF-XmF">
+                                <rect key="frame" x="5.5" y="736" width="403" height="126"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MLK-gB-I5V">
+                                        <rect key="frame" x="0.0" y="0.0" width="403" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="403" id="kRW-zI-3Gf"/>
+                                            <constraint firstAttribute="height" constant="30" id="y6b-3Z-y6W"/>
+                                        </constraints>
+                                        <state key="normal" title="Press"/>
+                                        <connections>
+                                            <action selector="CustomAnimationButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hvg-v2-2D8"/>
+                                        </connections>
+                                    </button>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" maximumValue="5" stepValue="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="IU3-m5-0OJ">
+                                        <rect key="frame" x="154.5" y="53" width="94" height="29"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="94" id="2Yq-ED-RTi"/>
+                                            <constraint firstAttribute="height" constant="29" id="7Uq-Vx-M5X"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="stepperButtonPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="I7i-zS-wGZ"/>
+                                        </connections>
+                                    </stepper>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cUf-Sm-r7c">
+                                        <rect key="frame" x="14.5" y="105" width="374" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="374" id="M4C-24-eRI"/>
+                                            <constraint firstAttribute="height" constant="21" id="uIX-RB-pEt"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -125,8 +139,10 @@
                             <constraint firstItem="B71-wZ-1cD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V3J-zw-lJv"/>
                             <constraint firstItem="n4n-W1-Ue7" firstAttribute="top" secondItem="B71-wZ-1cD" secondAttribute="bottom" constant="14" id="bGF-wL-Nva"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="v8V-f8-kEq" secondAttribute="trailing" constant="20" id="g79-Gp-bjR"/>
+                            <constraint firstItem="gVI-vF-XmF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="klj-6e-Fxe"/>
                             <constraint firstItem="hfc-4u-2mL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="lIi-Er-H30"/>
                             <constraint firstItem="jZ5-ib-nFl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nh4-MM-C15"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gVI-vF-XmF" secondAttribute="bottom" id="nlY-1e-r8L"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B71-wZ-1cD" secondAttribute="trailing" id="pe5-0O-nGG"/>
                             <constraint firstItem="hfc-4u-2mL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="sEA-Ze-KmK"/>
                             <constraint firstItem="W6d-vk-8bo" firstAttribute="top" secondItem="B71-wZ-1cD" secondAttribute="bottom" constant="14" id="w5p-oB-LC0"/>
@@ -151,27 +167,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dfq-eo-TFa">
-                                <rect key="frame" x="0.0" y="278" width="414" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uX1-Xx-sin">
-                                <rect key="frame" x="58" y="157" width="299" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJW-3M-xuY">
-                                <rect key="frame" x="189" y="718" width="37" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Enter"/>
-                                <connections>
-                                    <action selector="enterButtonPressed:" destination="Qad-14-uvy" eventType="touchUpInside" id="MI3-G5-vF2"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="162" translatesAutoresizingMaskIntoConstraints="NO" id="eV2-Pb-etn">
+                                <rect key="frame" x="0.0" y="153" width="414" height="591"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick your animation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uX1-Xx-sin">
+                                        <rect key="frame" x="57.5" y="0.0" width="299" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="299" id="Sj9-we-JRj"/>
+                                            <constraint firstAttribute="height" constant="21" id="VnO-HS-Z0Q"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dfq-eo-TFa">
+                                        <rect key="frame" x="0.0" y="183" width="414" height="216"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="216" id="DbY-ry-Pv8"/>
+                                            <constraint firstAttribute="width" constant="414" id="X1h-PB-3Js"/>
+                                        </constraints>
+                                    </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJW-3M-xuY">
+                                        <rect key="frame" x="188.5" y="561" width="37" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="37" id="U0H-Ka-Crz"/>
+                                            <constraint firstAttribute="height" constant="30" id="czH-9j-NF3"/>
+                                        </constraints>
+                                        <state key="normal" title="Enter"/>
+                                        <connections>
+                                            <action selector="enterButtonPressed:" destination="Qad-14-uvy" eventType="touchUpInside" id="MI3-G5-vF2"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="eV2-Pb-etn" firstAttribute="top" secondItem="Hch-C1-s7v" secondAttribute="top" constant="109" id="BP7-a0-cXW"/>
+                            <constraint firstItem="eV2-Pb-etn" firstAttribute="centerX" secondItem="Hch-C1-s7v" secondAttribute="centerX" id="ZhS-JV-fPm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hch-C1-s7v"/>
                     </view>
                     <connections>
